--- a/src/main/resources/assets/bq_npc_integration/lang/en_US.lang
+++ b/src/main/resources/assets/bq_npc_integration/lang/en_US.lang
@@ -7,3 +7,4 @@ bq_npc_integration.reward.faction=Faction Reward
 bq_npc_integration.reward.mail=Mail Reward
 
 bq_npc_integration.gui.faction_name=Faction: %s
+bq_npc_integration.gui.mail=Letter from %s
